log/build_2026-04-16_11-34-40/rl_turtlebot/stderr.log
  File "/home/ubuntu/ros2_ws/install/rl_turtlebot/lib/python3.10/site-packages/rl_turtlebot/dqn_dueling.py", line 1
    code dueling avec anti blocage (recule si il afront un abstacle)
         ^^^^^^^
SyntaxError: invalid syntax

